--- a/LandingPage.html
+++ b/LandingPage.html
@@ -49,15 +49,15 @@
             <form>
                 <div style="color: yellow; font-size: 40px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
                 <div style="display: inline-block;width: 200px; text-align: left;">
-                <label for="RUT"style="cursor: pointer;"><b>RUT:</b></label>
+                <label for="RUT"style="cursor: pointer;"><b>RUT:*</b></label>
                 <input style="width: 250px;"placeholder="12345678-9" type="text" name="Rut" id="RUT">
-                <label for="NOMBRE" style="cursor: pointer;"><b>NOMBRE:</b></label>
+                <label for="NOMBRE" style="cursor: pointer;"><b>NOMBRE:*</b></label>
                 <input style="width: 250px;" type="text" name="Nombre" id="NOMBRE">
-                <label for="APELLIDO"style="cursor: pointer;"><b>APELLIDO:</b></label>
+                <label for="APELLIDO"style="cursor: pointer;"><b>APELLIDO:*</b></label>
                 <input style="width: 250px;" type="text" name="Apellido" id="APELLIDO">
-                <label for="NUMERO"style="cursor: pointer;"><b>NÚMERO DE CONTACTO:</b></label>
+                <label for="NUMERO"style="cursor: pointer;"><b>NÚMERO DE CONTACTO:*</b></label>
                 <input style="width: 250px;" placeholder="9-12345678" type="text" name="Numero" id="NUMERO">
-                <label for="CORREO"style="cursor: pointer;"><b>CORREO ELECTRÓNICO:</b></label>
+                <label for="CORREO"style="cursor: pointer;"><b>CORREO ELECTRÓNICO:*</b></label>
                 <input style="width: 250px;" placeholder="asd@gmail.com" type="text" name="Correo" id="CORREO">
                 </div>
                 <div style="margin-top: 70px; display: inline-block;">
