--- a/LandingPage.html
+++ b/LandingPage.html
@@ -12,7 +12,7 @@
     <div class="container-fluid d-flex justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a class="nav-link btn btn-outline-light text-dark"style="font-size: 20px;" href="#PARTICIPA"><b>LLENA EL FORMULARIO</b></a>
+                <a class="nav-link btn btn-outline-light text-dark"style="font-size: 20px; border: 2px solid red" href="#PARTICIPA"><b>LLENA EL FORMULARIO</b></a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link btn btn-outline-light text-dark"style="font-size: 20px;" href="#SOMOS"><b>QUIENES SOMOS</b></a>
@@ -23,17 +23,15 @@
             </ul>
     </div>
     </nav>
-<div class="container" style="margin-top: 80px;" >  
-    <div class="row" style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 50px;">
-        <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
-        <div id="DETALLES" class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white">
-            <span style="color: yellow; text-align: center; ">¡GANA UN AÑO GRATIS</span> DE<br>(TAG)AUTOPISTA O TRANSPORTE PUBLICO!
+<div class="container-fluid" style=" p-5; margin-top: 200px" >  
+    <div class="row" style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 30px; ">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-warning  text-dark" style="border: 2px solid white">
+            <span style="color: red; text-align: center; "><b>¡GANA UN AÑO GRATIS</span> <br> DE (TAG)AUTOPISTA O TRANSPORTE PUBLICO! </b>
         </div>
-        <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
     </div>     
     <div id="SOMOS" class="row"style="margin-top: 100px;font-size: 18"> 
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
-        <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white" style=" font-family: monospace; text-align: center;">
+        <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white" style=" font-family: monospace; text-align: center; border-radius: 20px">
             <span style="color: yellow; text-align: center;"><h3>BenefiViaje</h3></span>
             <br>
             <b>En BenefiViajes, nos preocupamos por brindar apoyo a quienes enfrentan las dificultades de los incrementos de precios en el transporte. Somos una empresa comprometida con la comunidad, y nuestra misión es ofrecer soluciones que alivien tu bolsillo y faciliten tu movilidad diaria.
@@ -43,11 +41,11 @@
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
     </div>      
 
-    <div class="row"style="margin-top: 100px;">
-        <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
-        <div id="PARTICIPA" class="col-sm-6 col-md-6 col-lg-6 col-xl-6 bg-danger p-3 text-white" style="font-size: 16px; text-align: center;font-family: monospace">
+    <div class="row"style="margin-top: 100px;p-5 ">
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2"></div>
+        <div id="PARTICIPA" class="col-sm-8 col-md-8 col-lg-8 col-xl-8 bg-danger text-white" style="font-size: 16px; text-align: center;font-family: monospace; border-radius: 30px; border: 8px solid yellow">
             <form>
-                <div style="color: yellow; font-size: 40px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
+                <div style="color: yellow; font-size: 30px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top:50px;"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
                 <div style="display: inline-block;width: 200px; text-align: left;">
                 <label for="RUT"style="cursor: pointer;"><b>RUT:*</b></label>
                 <input style="width: 250px;"placeholder="12345678-9" type="text" name="Rut" id="RUT">
@@ -56,7 +54,7 @@
                 <label for="APELLIDO"style="cursor: pointer;"><b>APELLIDO:*</b></label>
                 <input style="width: 250px;" type="text" name="Apellido" id="APELLIDO">
                 <label for="NUMERO"style="cursor: pointer;"><b>NÚMERO DE CONTACTO:*</b></label>
-                <input style="width: 250px;" placeholder="9-12345678" type="text" name="Numero" id="NUMERO">
+                <input style="width: 250px;" placeholder="9-123456aa78" type="text" name="Numero" id="NUMERO">
                 <label for="CORREO"style="cursor: pointer;"><b>CORREO ELECTRÓNICO:*</b></label>
                 <input style="width: 250px;" placeholder="asd@gmail.com" type="text" name="Correo" id="CORREO">
                 </div>
@@ -67,10 +65,10 @@
                 <label for="TAG_AUTOPISTAS"style="cursor: pointer;"><b><span style="color:yellow;">UN AÑO GRATIS</span> DE TAG AUTOPISTAS</b></label><br>
                 <input type="radio" id="TRANSPORTE_PUBLIC" value="Transporte" name="opc">
                 <label for="TRANSPORTE_PUBLIC"style="cursor: pointer;margin-top: 10px; margin-bottom: 60px"><b><span style="color: yellow;">UN AÑO GRATIS</span> DE TRANSPORTE PÚBLICO</b></label><br>
-                <input style="height: 100px; width: 400px; font-size: 20px;" type="submit" value="ENVIAR TUS DATOS"></div>
+                <input style="height: 60px; width: 300px; font-size: 16px; pt-5; margin-bottom: 100px;" type="submit" value="ENVIAR TUS DATOS"></div>
             </form>
         </div>
-        <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-3"></div>
     </div>
     <div id="TERMINOS" class="row"style="margin-top: 100px;">
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
@@ -88,14 +86,14 @@
                                 <li><b>¡Solo completa el formulario de inscripción ACÁ ARRIBA!</b></li>
                                 <li><b>¡Listo! Ya estarás participando para ganar un año completo de transporte público o autopistas con TAG.</b></li>
                             </ol>
-                            
-                            
+
+
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>                       
         </div>
     </div>    
     <div id="SOMOS" class="row"style="margin-top: 100px; margin-bottom: 20px"> 
 
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-danger text-white p-5" style="font-size: 20px; text-align: center;font-family: monospace">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-danger text-white p-5" style="font-size: 20px; text-align: center;font-family: monospace;border-radius: 30px; border: 8px solid yellow">
             <h3><b>¡No esperes más y participa en nuestro concurso para tener la oportunidad de <span style="color: yellow;"><b>VIAJAR GRATIS DURANTE TODO UN AÑO!</span><br>
             Fechas Concurso <br> </b>
             Inicio: <span style="color: yellow;">19/04/2024</span>
@@ -103,5 +101,6 @@
 
     </div>      
 </div>
+  <div></div>
 </body>
 </html>
