--- a/LandingPage.html
+++ b/LandingPage.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="estilos.css">
+<link rel="stylesheet" href="style.css">
     <title>LandingP</title>
 </head>
 <body style="background-image: url(https://thumbs.dreamstime.com/b/carretera-del-asfalto-con-textura-de-las-marcas-de-camino-25199138.jpg);">
