Condicionó number a imput correctos

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -48,13 +48,13 @@
                 <div style="color: yellow; font-size: 30px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top:50px;"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
                 <div style="display: inline-block;width: 200px; text-align: left;">
                 <label for="RUT"style="cursor: pointer;"><b>RUT:*</b></label>
-                <input style="width: 250px;"placeholder="12345678-9" type="text" name="Rut" id="RUT">
+                <input style="width: 250px;"placeholder="12345678-9" type="number" name="Rut" id="RUT">
                 <label for="NOMBRE" style="cursor: pointer;"><b>NOMBRE:*</b></label>
                 <input style="width: 250px;" type="text" name="Nombre" id="NOMBRE">
                 <label for="APELLIDO"style="cursor: pointer;"><b>APELLIDO:*</b></label>
                 <input style="width: 250px;" type="text" name="Apellido" id="APELLIDO">
                 <label for="NUMERO"style="cursor: pointer;"><b>NÚMERO DE CONTACTO:*</b></label>
-                <input style="width: 250px;" placeholder="9-123456aa78" type="text" name="Numero" id="NUMERO">
+                <input style="width: 250px;" placeholder="9-123456aa78" type="number" name="Numero" id="NUMERO">
                 <label for="CORREO"style="cursor: pointer;"><b>CORREO ELECTRÓNICO:*</b></label>
                 <input style="width: 250px;" placeholder="asd@gmail.com" type="text" name="Correo" id="CORREO">
                 </div>
