compilacion completa con formulario alineadoo

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="estilos.css">
     <title>LandingP</title>
 </head>
 <body style="background-image: url(https://thumbs.dreamstime.com/b/carretera-del-asfalto-con-textura-de-las-marcas-de-camino-25199138.jpg);">
@@ -41,9 +41,9 @@
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
     </div>      
 
-    <div class="row"style="margin-top: 100px;p-5 ">
-        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2"></div>
-        <div id="PARTICIPA" class="col-sm-8 col-md-8 col-lg-8 col-xl-8 bg-danger text-white" style="font-size: 16px; text-align: center;font-family: monospace; border-radius: 30px; border: 8px solid yellow">
+    <div class="row"style="margin-top: 100px; p-5 ">
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2"></div>
+        <div id="PARTICIPA" class="col-sm-8 col-md-8 col-lg-8 col-xl-8 col-xxl-8 bg-danger text-white" style="font-size: 16px; text-align: center;font-family: monospace; border-radius: 30px; border: 8px solid yellow">
             <form>
                 <div style="color: yellow; font-size: 30px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top:50px;"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
                 <div style="display: inline-block;width: 200px; text-align: left;">
@@ -54,12 +54,12 @@
                 <label for="APELLIDO"style="cursor: pointer;"><b>APELLIDO:*</b></label>
                 <input style="width: 250px;" type="text" name="Apellido" id="APELLIDO">
                 <label for="NUMERO"style="cursor: pointer;"><b>NÚMERO DE CONTACTO:*</b></label>
-                <input style="width: 250px;" placeholder="9-123456aa78" type="number" name="Numero" id="NUMERO">
+                <input style="width: 250px;" placeholder="9-12345678" type="number" name="Numero" id="NUMERO">
                 <label for="CORREO"style="cursor: pointer;"><b>CORREO ELECTRÓNICO:*</b></label>
                 <input style="width: 250px;" placeholder="asd@gmail.com" type="text" name="Correo" id="CORREO">
                 </div>
+              <br>
                 <div style="margin-top: 70px; display: inline-block;">
-                <br>
                 <h3><b>ELIGE UN BENEFICIO</b></h3>
                 <br>
                 <input type="radio" id="TAG_AUTOPISTAS" value="tag" name="opc">
@@ -69,7 +69,7 @@
                 <input style="height: 60px; width: 300px; font-size: 16px; pt-5; margin-bottom: 100px;" type="submit" value="ENVIAR TUS DATOS"></div>
             </form>
         </div>
-        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-3"></div>
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2"></div>
     </div>
     <div id="TERMINOS" class="row"style="margin-top: 100px;">
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
