se corrigieron errores

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -23,10 +23,11 @@
             </ul>
     </div>
     </nav>
-<div class="container-fluid" style=" p-5; margin-top: 200px" >  
+    <div class="container-fluid" style="margin-top: 200px;"></div>
+<div class="container-fluid" style="margin-top: 200px">  
     <div class="row" style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 30px; ">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-warning  text-dark" style="border: 2px solid white">
-            <span style="color: red; text-align: center; "><b>¡GANA UN AÑO GRATIS</span> <br> DE (TAG)AUTOPISTA O TRANSPORTE PUBLICO! </b>
+            <span style="color: red; text-align: center;"><b>¡GANA UN AÑO GRATIS</span> <br> DE (TAG)AUTOPISTA O TRANSPORTE PUBLICO! </b>
         </div>
     </div>     
     <div id="SOMOS" class="row"style="margin-top: 100px;font-size: 18"> 
@@ -58,7 +59,7 @@
                 <label for="CORREO"style="cursor: pointer;"><b>CORREO ELECTRÓNICO:*</b></label>
                 <input style="width: 250px;" placeholder="asd@gmail.com" type="text" name="Correo" id="CORREO">
                 </div>
-              <br>
+                <br>
                 <div style="margin-top: 70px; display: inline-block;">
                 <h3><b>ELIGE UN BENEFICIO</b></h3>
                 <br>
@@ -66,7 +67,7 @@
                 <label for="TAG_AUTOPISTAS"style="cursor: pointer;"><b><span style="color:yellow;">UN AÑO GRATIS</span> DE TAG AUTOPISTAS</b></label><br>
                 <input type="radio" id="TRANSPORTE_PUBLIC" value="Transporte" name="opc">
                 <label for="TRANSPORTE_PUBLIC"style="cursor: pointer;margin-top: 10px; margin-bottom: 60px"><b><span style="color: yellow;">UN AÑO GRATIS</span> DE TRANSPORTE PÚBLICO</b></label><br>
-                <input style="height: 60px; width: 300px; font-size: 16px; pt-5; margin-bottom: 100px;" type="submit" value="ENVIAR TUS DATOS"></div>
+                <input style="height: 60px; width: 300px; font-size: 16px; margin-bottom: 100px;" type="submit" value="ENVIAR TUS DATOS"></div>
             </form>
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2"></div>
