--- a/LandingPage.html
+++ b/LandingPage.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="estilos.css">
+<link rel="stylesheet" href="style.css">
     <title>LandingP</title>
 </head>
 <body style="background-image: url(https://thumbs.dreamstime.com/b/carretera-del-asfalto-con-textura-de-las-marcas-de-camino-25199138.jpg);">
@@ -26,7 +26,7 @@
     <div class="container-fluid" style="margin-top: 200px;"></div>
 <div class="container-fluid" style="margin-top: 200px">  
     <div class="row" style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 30px; ">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-warning  text-dark" style="border: 2px solid white">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-warning  text-dark " style="border: 2px solid white">
             <span style="color: red; text-align: center;"><b>¡GANA UN AÑO GRATIS</span> <br> DE (TAG)AUTOPISTA O TRANSPORTE PUBLICO! </b>
         </div>
     </div>     
