--- a/LandingPage.html
+++ b/LandingPage.html
@@ -26,14 +26,24 @@
     <div class="container-fluid" style="margin-top: 200px;"></div>
 <div class="container-fluid" style="margin-top: 200px">  
     <div class="row" style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 30px; ">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-warning  text-dark " style="border: 2px solid white">
+        <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1" style="background-image:url(https://github.com/BranCG/EVA2/blob/main/img/cono22.png?raw=true);background-repeat: no-repeat;
+            height: 95px;
+            background-size: contain;
+            margin: 0 auto;"></div>
+        <div class=" col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-warning  text-dark" style="border: 2px solid white">
             <span style="color: red; text-align: center;"><b>¡GANA UN AÑO GRATIS</span> <br> DE (TAG)AUTOPISTA O TRANSPORTE PUBLICO! </b>
         </div>
+        <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1" style="background-image:url(https://github.com/BranCG/EVA2/blob/main/img/cono11.png?raw=true);background-repeat: no-repeat;
+            height: 95px;
+            background-size: contain;"></div>
+        <div ></div>
     </div>     
     <div id="SOMOS" class="row"style="margin-top: 100px;font-size: 18"> 
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
-        <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white" style=" font-family: monospace; text-align: center; border-radius: 20px">
-            <span style="color: yellow; text-align: center;"><h3>BenefiViaje</h3></span>
+        <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white" style="font-family: monospace; text-align: center; border-radius: 20px; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/huella22.png?raw=true);background-repeat: no-repeat;
+            background-size: 250px;
+            margin: 0 auto; border: 1px solid yellow ">
+            <span style="color: yellow; text-align: center;"><h3><b>BenefiViaje</b></h3></span>
             <br>
             <b>En BenefiViajes, nos preocupamos por brindar apoyo a quienes enfrentan las dificultades de los incrementos de precios en el transporte. Somos una empresa comprometida con la comunidad, y nuestra misión es ofrecer soluciones que alivien tu bolsillo y faciliten tu movilidad diaria.
 
@@ -43,11 +53,15 @@
     </div>      
 
     <div class="row"style="margin-top: 100px; p-5 ">
-        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2"></div>
-        <div id="PARTICIPA" class="col-sm-8 col-md-8 col-lg-8 col-xl-8 col-xxl-8 bg-danger text-white" style="font-size: 16px; text-align: center;font-family: monospace; border-radius: 30px; border: 8px solid yellow">
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2" stye></div>
+        <div id="PARTICIPA" class="col-sm-8 col-md-8 col-lg-8 col-xl-8 col-xxl-8 bg-danger text-white" style="font-size: 16px; text-align: center;font-family: monospace; border-radius: 30px; border: 8px solid yellow; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/tagg.png?raw=true);background-repeat: no-repeat;
+            background-size: 80px;
+            background-position-y: 520px;
+            background-position-x: 220px;
+            margin: 0 auto; border: 1px solid yellow ">
             <form>
                 <div style="color: yellow; font-size: 30px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top:50px;"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
-                <div style="display: inline-block;width: 200px; text-align: left;">
+                <div style="display: inline-block;width: 200px;">
                 <label for="RUT"style="cursor: pointer;"><b>RUT:*</b></label>
                 <input style="width: 250px;"placeholder="12345678-9" type="number" name="Rut" id="RUT">
                 <label for="NOMBRE" style="cursor: pointer;"><b>NOMBRE:*</b></label>
@@ -60,7 +74,8 @@
                 <input style="width: 250px;" placeholder="asd@gmail.com" type="text" name="Correo" id="CORREO">
                 </div>
                 <br>
-                <div style="margin-top: 70px; display: inline-block;">
+                <div style="margin-top: 70px; display: inline-block; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/bip.png?raw=true);background-repeat: no-repeat;
+            background-size: 70px; background-position-x: 190px; background-position-y: 120px;">
                 <h3><b>ELIGE UN BENEFICIO</b></h3>
                 <br>
                 <input type="radio" id="TAG_AUTOPISTAS" value="tag" name="opc">
@@ -74,7 +89,8 @@
     </div>
     <div id="TERMINOS" class="row"style="margin-top: 100px;">
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
-        <div  class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white"style="font-size: 18px;font-family: monospace">
+        <div  class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white"style="font-size: 18px;font-family: monospace; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/huella11.png?raw=true);background-repeat: no-repeat;
+            background-size: 180px; background-position-y: 140px; background-position-x: 100px; border: 1px solid yellow;">
             <span style="color: yellow;font-family: monospace"><h3><b>Términos y condiciones</b></h3></span>
                 <ul>
                     <li><b>El concurso está abierto a todas las personas mayores de 18 años.</b></li>
