Se optimiza apuntando a hoja de estilos style.css

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -12,24 +12,21 @@
     <div class="container-fluid d-flex justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a class="nav-link btn btn-outline-light text-dark"style="font-size: 20px; border: 5px solid red" href="#PARTICIPA"><b>LLENA EL FORMULARIO</b></a>
+                <a class="nav-link btn btn-outline-light text-dark participa" href="#PARTICIPA"><b>LLENA EL FORMULARIO</b></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link btn btn-outline-light text-dark"style="font-size: 20px;" href="#SOMOS"><b>QUIENES SOMOS</b></a>
+                <a class="nav-link btn btn-outline-light text-dark somos" href="#SOMOS"><b>QUIENES SOMOS</b></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link btn btn-outline-light text-dark"style="font-size: 20px;" href="#TERMINOS"><b>TERMINOS & CONDICIONES</b></a>
+                <a class="nav-link btn btn-outline-light text-dark terminos" href="#TERMINOS"><b>TERMINOS & CONDICIONES</b></a>
                 </li>
             </ul>
     </div>
     </nav>
-    <div class="container-fluid" style="margin-top: 200px;"></div>
-<div class="container-fluid" style="margin-top: 200px">  
-    <div class="row" style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 30px; ">
-        <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1" style="background-image:url(https://github.com/BranCG/EVA2/blob/main/img/cono22.png?raw=true);background-repeat: no-repeat;
-            height: 95px;
-            background-size: contain;
-            margin: 0 auto;"></div>
+    <div class="container-fluid" style="margin-top: 200px">  
+    <div class="row row1">
+        <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1" style="background-image:url(https://github.com/BranCG/EVA2/blob/main/img/cono22.png?raw=true);background-repeat: no-repeat;
+            height: 95px; background-size: contain; margin: 0 auto;"></div>
         <div class=" col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-warning  text-dark" style="border: 2px solid white">
             <span style="color: red; text-align: center;"><b>¡GANA UN AÑO GRATIS</span> <br> DE (TAG)AUTOPISTA O TRANSPORTE PUBLICO! </b>
         </div>
@@ -38,11 +35,10 @@
             background-size: contain;"></div>
         <div ></div>
     </div>     
-    <div id="SOMOS" class="row"style="margin-top: 100px;font-size: 18"> 
+    <div id="SOMOS" class="row row2"> 
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
         <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white" style="font-family: monospace; text-align: center; border-radius: 20px; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/huella22.png?raw=true);background-repeat: no-repeat;
-            background-size: 250px;
-            margin: 0 auto; border: 1px solid yellow ">
+            background-size: 250px; margin: 0 auto; border: 1px solid yellow ">
             <span style="color: yellow; text-align: center;"><h3><b>BenefiViaje</b></h3></span>
             <br>
             <b>En BenefiViajes, nos preocupamos por brindar apoyo a quienes enfrentan las dificultades de los incrementos de precios en el transporte. Somos una empresa comprometida con la comunidad, y nuestra misión es ofrecer soluciones que alivien tu bolsillo y faciliten tu movilidad diaria.
@@ -52,15 +48,12 @@
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
     </div>      
 
-    <div class="row"style="margin-top: 100px; p-5 ">
-        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2" stye></div>
-        <div id="PARTICIPA" class="col-sm-8 col-md-8 col-lg-8 col-xl-8 col-xxl-8 bg-danger text-white" style="font-size: 16px; text-align: center;font-family: monospace; border-radius: 30px; border: 8px solid yellow; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/tagg.png?raw=true);background-repeat: no-repeat;
-            background-size: 80px;
-            background-position-y: 520px;
-            background-position-x: 220px;
-            margin: 0 auto; border: 1px solid yellow ">
+    <div id="PARTICIPA"  class="row p-5 row3 ">
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2"></div>
+        <div  class="col-sm-8 col-md-8 col-lg-8 col-xl-8 col-xxl-8 bg-danger text-white" style="font-size: 16px; text-align: center;font-family: monospace; border-radius: 30px; border: 8px solid yellow; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/tagg.png?raw=true);background-repeat: no-repeat;
+            background-size: 80px; background-position-y: 520px; background-position-x: 220px; margin: 0 auto; border: 1px solid yellow ">
             <form>
-                <div style="color: yellow; font-size: 30px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; margin-top:50px;"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
+                <div class="tituloForm"><b>PARTICIPA LLENANDO <br> LOS DATOS</b></div>
                 <div style="display: inline-block;width: 200px;">
                 <label for="RUT"style="cursor: pointer;"><b>RUT:*</b></label>
                 <input style="width: 250px;"placeholder="12345678-9" type="number" name="Rut" id="RUT">
@@ -87,7 +80,7 @@
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2"></div>
     </div>
-    <div id="TERMINOS" class="row"style="margin-top: 100px;">
+    <div id="TERMINOS" class="row row4">
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
         <div  class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white"style="font-size: 18px;font-family: monospace; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/huella11.png?raw=true);background-repeat: no-repeat;
             background-size: 180px; background-position-y: 140px; background-position-x: 100px; border: 1px solid yellow;">
@@ -104,20 +97,17 @@
                                 <li><b>¡Solo completa el formulario de inscripción ACÁ ARRIBA!</b></li>
                                 <li><b>¡Listo! Ya estarás participando para ganar un año completo de transporte público o autopistas con TAG.</b></li>
                             </ol>
-
-
         <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>                       
         </div>
     </div>    
-    <div id="SOMOS" class="row"style="margin-top: 100px; margin-bottom: 20px"> 
+    <div id="SOMOS" class="row row5"> 
 
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-danger text-white p-5" style="font-size: 20px; text-align: center;font-family: monospace;border-radius: 30px; border: 8px solid yellow">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 bg-danger text-white p-5 row6">
             <h3><b>¡No esperes más y participa en nuestro concurso para tener la oportunidad de <span style="color: yellow;"><b>VIAJAR GRATIS DURANTE TODO UN AÑO!</span><br>
             Fechas Concurso <br> </b>
             Inicio: <span style="color: yellow;">19/04/2024</span>
             Fin: <span style="color: yellow;">23/04/2024</span></b></h3></div>
-
-    </div>      
+    </div>
 </div>
 </body>
 </html>
