--- a/LandingPage.html
+++ b/LandingPage.html
@@ -69,7 +69,7 @@
                             <label for="TAG_AUTOPISTAS" style="cursor: pointer;"><b><span style="color:yellow;">UN AÑO GRATIS</span> DE TAG AUTOPISTAS</b></label><br>
                             <input type="radio" id="TRANSPORTE_PUBLIC" value="Transporte" name="opc">
                             <label for="TRANSPORTE_PUBLIC" style="cursor: pointer; margin-top: 10px; margin-bottom: 60px"><b><span style="color: yellow;">UN AÑO GRATIS</span> DE TRANSPORTE PÚBLICO</b></label><br>
-                            <input class="enviar" style="height: 60px; width: 300px; font-size: 16px; margin-bottom: 100px;" type="submit" value="ENVIAR TUS DATOS">
+                            <input class="enviar" type="submit" value="ENVIAR TUS DATOS">
                         </div>
                     </form>
                 </div>
